修复代码审查问题：添加参数/入口注释、移除无用导入、使硬编码值可配置、清理内联匿名类
- 添加方法参数和入口点的 Javadoc 注释（AiMessageChatMemory / AiMessageController / MessageDemoController 等）
- RedisVectorConfig: 移除未使用 SearchRequest 导入
- AiMessageChatMemory: lastN 改为 @Value 可配置
- MessageDemoController: 匿名 ChatMemory 改用正常 import，可读性提升
- application.yml: 替换旧 dash-scope/spark 配置为 OpenAI 兼容 DashScope 配置
- RedisConfig/RedisVectorConfig: 添加类头模块职责注释

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>